<resources>
    <string name="app_name">Favemus</string>
    <string name="error">Error</string>
    <string name="server_error">Error from the server.</string>

    <!-- Login-->
    <string name="login">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_no_account">Don\'t have an account?</string>

    <string name="login_error_email_empty">The email must no be empty.</string>
    <string name="login_error_invalid_email">The email isn\'t valid.</string>
    <string name="login_error_password_empty">The password must no be empty.</string>
    <string name="login_error_password_too_short">The password must have at least 6 characters.</string>
    <string name="login_error_email_or_password_incorrect">The email or password is incorrect.</string>

    <!-- Register-->
    <string name="sign_up">Sign up</string>
    <string name="sign_up_continue">Continue</string>
    <string name="verify_password_hint">Verify password</string>
    <string name="name_hint">Name</string>
    <string name="country_hint">Country</string>

    <!-- Language Dialog-->
    <string name="dialog_language_title">Select a country</string>
    <string name="dialog_language_flag">Flag</string>
    <string name="dialog_language_search">Search…</string>
</resources>
